# zap

./: .editorconfig  .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  eslint.config.js  index.html  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
components/: app.vue
docs/: deposit-planning.md  dev.md  eds-guidance.md  styles-alignment-0-5-0.md
e2e/: ClipboardCopy.spec.ts  Download.spec.ts  Export.spec.ts  ExternalServiceAgol.spec.ts  Output.spec copy.ts  Output.spec.ts  RecordValidation.spec.ts  ShowSection.spec.ts  Thumbnails.spec.ts  appTitle.spec.ts  tsconfig.json
e2e/downloads/: fileSupported.spec.ts  fileUploadDupeFails.spec.ts  sanPathStatOk.spec.ts  sanPathUnsupported.spec.ts
e2e/uploads/: fileSelect.spec.ts  fileSupported.spec.ts  fileUnsupported.spec.ts  fileUploadOk.spec.ts  sanPathSelect.spec.ts  sanPathStatFail.spec.ts  sanPathUnsupported.spec.ts
e2e/validation/: invalidJsonFails.spec.ts  minInvalidFails.spec.ts  minValidOk.spec.ts  supportedInvalidFails.spec.ts  supportedValidOk.spec.ts
extent-map/: .env.example
extent-map-backend/: pyproject.toml
sample-data/geojson/: sample.json
sample-data/gpkg/: sample.gpkg
sample-data/invalid/: sample.x
sample-data/jpeg/: sample.jgw
sample-data/mbtiles/: sample.mbtiles
sample-data/shp/: sample.dbf  sample.shp  sample.shx
scripts/: deployments-cleanup.sh  file-stat.php  file-upload-downloads.php  file-upload-internal.php  file-uploads.php  ms-sharing-link-encoder.py  validate-data.ts
scripts/extent-map-backend/: pyproject.toml
scripts/extent-map-backend/src/zap_extent_map/: __main__.py  agol.py  data.py
scripts/file-upload-external/: .env.example  pyproject.toml
scripts/file-upload-external/src/zap_file_upload/: __init__.py  config.py
scripts/geo-pdf/: pyproject.toml
scripts/geo-pdf/src/zap_pdf/: __init__.py  config.py  pdfminer.py  utils.py
scripts/openai/: .example.env  poetry.toml  pyproject.toml
scripts/openai/src/zap_openai/: __init__.py  config.py
scripts/schema-resolver/: main.py  pyproject.toml
src/: App.vue  declarations.d.ts  main.css  main.ts
src/components/: Abstract.vue  AppTitle.vue  BackToTop.vue  Button.vue  ChangeLog.vue  Citation.vue  ClipboardCopy.vue  Contacts.vue  Dates.vue  Download.vue  Downloads.vue  Edition.vue  Epilogue.vue  FileIdentifier.vue  FormInput.vue  FormLabel.vue  FormTextarea.vue  Freetext.vue  GeographicExtent.vue  GuidanceText.vue  Idea.vue  Ideas.vue  IdentifierDoi.vue  IdentifierEsri.vue  IdentifierSelf.vue  Identifiers.vue  Licence.vue  Lineage.vue  Link.vue  Markdown.vue  Output.vue  Pre.vue  Preface.vue  Prologue.vue  Prose.vue  ResourceType.vue  Resources.vue  SectionBorder.vue  SectionLabel.vue  SectionTitle.vue  (+6 more)
src/components/__tests__/: AppTitle.spec.ts  BackToTop.spec.ts  Link.spec.ts  Markdown.spec.ts  Output.spec.ts  Pre.spec.ts  Prose.spec.ts  SectionBorder.spec.ts  SectionLabel.spec.ts  SectionTitle.spec.ts  SubSectionBorder.spec.ts  TwoColumn.spec.ts
src/components/bases/: AppTitle.vue  BackToTop.vue  Button.vue  ButtonStat.vue  ButtonUpload.vue  ClipboardCopy.vue  Date.vue  DropDown.vue  FormInput.vue  FormTextarea.vue  GuidanceText.vue  Link.vue  Markdown.vue  Output.vue  Prose.vue  SectionBorder.vue  SectionExperimental.vue  SectionLabel.vue  SectionTitle.vue  SubSectionTitle.vue  ThreeColumn.vue  TwoColumn.vue  Upload.vue  UploadFile.vue  UploadSan.vue  UploadSwitcher.vue
src/components/compositions/: Record.vue
src/components/static/: Loading.vue
src/data/: collections.json  extents.json  formats.json  ideas.json  individuals.json  keywords.json  licences.json  organisations.json  physical_sizes.json  profiles.json  projections.json  series.json  services.json  settings.json  thumbnails.json  validation.json
src/lib/: aggregations.ts  ai.ts  citation.ts  contacts.ts  control.ts  data.ts  dates.ts  distribution.ts  env.ts  esri.ts  esriAuth.ts  esriNoTest.ts  extents.ts  identifiers.ts  keywords.ts  record.ts  sentry.ts  supplemental.ts  upload.ts  validation.ts
src/lib/__tests__/: _validation_data.ts  aggregations.spec.ts  ai.spec.ts  citation.spec.ts  constraints.spec.ts  contacts.spec.ts  control.spec.ts  data.spec.ts  dates.spec.ts  distribution.spec.ts  env.spec.ts  esri.spec.ts  esriAuth.spec.ts  extents.spec.ts  identifiers.spec.ts  keywords.spec.ts  record.spec.ts  supplemental.spec.ts  uploads.spec.ts  validation.spec.ts
src/schemas/: collections.json  extents.json  formats.json  ideas.json  individuals.json  keywords.json  licences.json  organisations.json  physical_sizes.json  projections.json  record-src.json  record.json  series.json  services.json  settings.json  thumbnails.json
src/sections/: Abstract.vue  Access.vue  AccessAnonymous.vue  AccessNerc.vue  Citation.vue  Citation_v1_0.vue  Citation_v2_0.vue  Contacts.vue  Contacts_v1_0.vue  Contacts_v1_1.vue  Dates.vue  Dates_v1_0.vue  Download.vue  Download_v1_0.vue  Downloads.vue  Edition.vue  Edition_v1_0.vue  Epilogue.vue  Epilogue_v1_0.vue  ExternalServices.vue  FileIdentifier.vue  FileIdentifier_v1_0.vue  GeographicExtent.vue  GeographicExtentGlobe.vue  GeographicExtentMap.vue  GeographicExtent_v1_0.vue  Idea.vue  Idea_v1_0.vue  Ideas.vue  Ideas_v1_0.vue  Ideas_v2_0.vue  IdentifierBasGitlab.vue  IdentifierDoi.vue  IdentifierDoi_v1_0.vue  IdentifierEsri.vue  IdentifierEsri_v1_0.vue  IdentifierSelf.vue  Identifiers.vue  Identifiers_v1_0.vue  Identifiers_v1_1.vue  (+21 more)
src/sections/__tests__/: Abstract.spec.ts  Access.spec.ts  AccessAnonymous.spec.ts  AccessNerc.spec.ts  (+25 more)
src/types/: app.d.ts  declarations.d.ts  enum.ts  iso.d.ts
src/utils/: citation.ts  constraints.ts  contacts.ts  control.ts  crosscite.ts  data.ts  dates.ts  distribution.ts  env.ts  esri.ts  esriAuth.ts  esriNoTest.ts  extents.ts  keywords.ts  sentry.ts  upload.ts  validation.ts
src/zap/: streamlit_app.py
tasks/: release.py
tests/zap_tests/: test_streamlit.py
(+142 files in other folders)
