[project]
name = "zap"
version = "0.23.0"
description = "A prototype metadata editor for MAGIC discovery and administration metadata."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Felix Fennell", email = "felnne@bas.ac.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pymarkdownlnt>=0.9.35",
    "ruff>=0.15.4",
    "safety>=3.7.0",
    "taskipy>=1.14.1",
    "watchdog>=6.0.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-random-order>=1.2.0",
]

[[tool.uv.index]]
name = "self"
url = "https://gitlab.data.bas.ac.uk/api/v4/projects/1159/packages/pypi/simple"
publish-url = "https://gitlab.data.bas.ac.uk/api/v4/projects/1159/packages/pypi"
explicit = true

[tool.taskipy.variables]
docs_targets = "docs/ README.md CHANGELOG.md"
targets = "src/ tasks/ tests/"
cov_options = "--cov --cov-report=html"

[tool.taskipy.tasks]
# generic dev
build = { cmd = "uv build", help = "Build app package" }
format = { cmd = "ruff format {targets}", help = "Format app", use_vars = true }
lint = { cmd = "ruff check {targets}", help = "Lint app", use_vars = true }
markdown = { cmd = "pymarkdown scan --recurse {docs_targets}", help = "Lint docs", use_vars = true }
pre-commit = { cmd = "pre-commit run --all-files", help = "Run pre-commit hooks on all files" }
test = { cmd = "pytest", help = "Run tests" }
test-cov = { cmd = "pytest {cov_options}", help = "Run tests with coverage", use_vars = true }
test-reset = { cmd = "pytest --cache-clear", help = "Reset pytest cache and run tests" }
safety = { cmd = "safety scan --detailed-output", help = "Check for insecure dependencies" }
outdated = { cmd = "uv tree --outdated --depth=1", help = "List outdated directed dependencies" }
# CI
ci-test = { cmd = "pytest {cov_options} -o junit_family=xunit2 --junitxml=test-results.xml --continue-on-collection-errors", help = "Called by CI", use_vars = true }
ci-safety = { cmd = "safety --stage cicd scan --detailed-output", help = "Called by CI" }
# app
run = { cmd = "streamlit run src/zap/streamlit_app.py", help = "Run app" }

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
#   A | builtins (variables named after builtin names)
# ANN | annotations (type hints)
#   B | bug-bear (bad code)
#  B9 | bug-bear opinionated (additional bad code)
# C90 | mccabe (code complexity)
#  C4 | comprehensions (list/dict/set comprehensions)
#   D | pydocstyle (docstring)
# DTZ | datetimez (date/time)
#   E | pycodestyle errors (PEP8)
#  EM | errmsg (exceptions)
# ERA | eraticate (comments)
#   F | pyflakes (invalid/bad code)
#  FA | uture-annotations (type hints)
#   I | isort (import ordering)
#   N | pep8-naming (PEP8)
#  PT | pytest-style (tests)
# PTH | use-pathlib (old syntax)
# RET | return (return statements)
# RUF | ruff (other)
#   S | bandit (static security)
# SIM | simplicity (code complexity)
#  TD | todos (comments)
# TRY | tryceratops (exceptions)
#  UP | pyupgrade (old syntax)
#   W | pycodestyle warnings (PEP8)
select = ["A", "ANN", "B", "B9", "C90", "C4", "D", "DTZ", "E", "EM", "ERA", "F", "FA", "I", "N", "PT", "PTH", "RET", "RUF", "S", "SIM", "TD", "TRY", "UP", "W"]

#   D100 | for avoding module level docstrings
#   D104 | for avoding package level docstrings
#   D203 | for requring blank line before classes (which looks silly)
#   D212 | for docstring requring multi-line comments to start on first line (which looks silly)
#   D401 | for requring imperative mood in docstrings (finally had enough, too annoying)
#   D402 | for docstring that can't resemble their signatures (despite them being completely different)
#   E501 | for bug-bear compatibility (as B905 overrides line length checks)
#  PT001 | for `@pytest.fixture` parentheses (as it's unstable/unreliable)
#  PT023 | for `@pytest.mark.cov` parentheses (as it's unstable/unreliable)
#  TD002 | for TODOs without an author (as an issue should assign ownership)
ignore = ["D100", "D104", "D107", "D203", "D212", "D401", "D402", "E501", "PT001", "PT023", "TD002"]

[tool.ruff.lint.per-file-ignores]
#   tests/*   | ANN201 | ignore public functions
#   tests/*   | ANN401 | ignore use of 'Any' type
#   tests/*   |   S101 | ignore use of assert
"tests/*" = ["ANN201", "ANN401", "D401", "S101"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.pymarkdown]
plugins.md013.line_length = 120
plugins.md013.code_blocks = false
plugins.md014.enabled = false
extensions.markdown-extended-autolinks.enabled = true

[tool.pytest.ini_options]
# --strict-markers | fail if unknown markers are used
# --random-order   | run tests in random order
# -x               | stop after first failure [Overriden in CI]
# --ff             | run failed tests first
addopts = "--strict-markers --random-order -x --ff"
markers = [
    "cov: coverage checks (deselect with '-m \"not cov\"')",
]

[tool.coverage.report]
skip_empty = true
show_missing = false
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.run]
branch = true
source = ["src"]
omit = []

[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"
