[tool.poetry]
name = "zap-extent-map"
version = "0.1.0"
description = "Data processing for Zap ⚡️ extent map"
authors = ["Felix Fennell <felnne@bas.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zap_extent_map", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
geojson = "^3.1.0"
shapely = "^2.0.2"
requests = "^2.31.0"
environs = "^10.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
